fix: remove dark mode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,17 +40,17 @@ a {
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  body,
-  input,
-  textarea {
-    background-color: #333;
-  }
+// @media (prefers-color-scheme: dark) {
+//   body,
+//   input,
+//   textarea {
+//     background-color: #333;
+//   }
 
-  *,
-  h1,
-  h2,
-  h3 {
-    color: #ccc;
-  }
-}
+//   *,
+//   h1,
+//   h2,
+//   h3 {
+//     color: #ccc;
+//   }
+// }
